--- a/app/src/main/res/layout/activity_homepage.xml
+++ b/app/src/main/res/layout/activity_homepage.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/homepage"
     xmlns:tools="http://schemas.android.com/tools"
     android:background="#FB9898"
     tools:context=".homepage">
@@ -92,7 +93,9 @@
         android:layout_alignParentBottom="false"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginTop="400dp">
+        android:layout_marginTop="400dp"
+        android:id="@+id/llgd"
+        >
 
         <Button
             android:id="@+id/add_new"
