--- a/app/src/main/res/layout/alert_dialog.xml
+++ b/app/src/main/res/layout/alert_dialog.xml
@@ -4,6 +4,7 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/alert_dialog_1"
+    android:background="#FB9898"
     >
     <RelativeLayout
         android:layout_width="wrap_content"
@@ -91,7 +92,6 @@
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ic_baseline_date_range_24"
                     android:id="@+id/ImgDate"
 
                     />
@@ -161,8 +161,7 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/ImgClc"
-                android:src="@drawable/ic_baseline_access_time_24" />
+                android:id="@+id/ImgClc"/>
 
             <TextView
 
@@ -238,7 +237,7 @@
                 android:id="@+id/comment"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Comment(optional)"
+                android:hint="Comment"
                 android:inputType="textImeMultiLine" />
         </com.google.android.material.textfield.TextInputLayout>
 
